# phd

./: .gitignore  README.md
c++/gpr_cpp/: CMakeLists.txt
code/cpp/: CMakeLists.txt  notes.txt
code/python/: .gitignore  main.py  plot.py  store.py
course/dissertation/: refs.bib
course/mphil/: Dissertation.lyx
course/probationary review/: Jackson_Haran_Report.lyx  course.bib
cpp/: CMakeLists.txt  Makefile  README.md
cpp/bindings/: bindings.cpp  bindings_test.py  compile_bindings.sh  fv_test.py  solver_test.py  system_test.py  test_functions.py
cpp/bindings/bindings_tests/: fv_tests.py  solver_tests.py  system_tests.py  test_functions.py
cpp/include/pybind11/: eigen.h
cpp/include/pybind11-master/include/pybind11/: eigen.h
cpp/include/skfmm/: distance_marcher.cpp
cpp/src/: main.cpp  options.h
cpp/src/etc/: debug.cpp  debug.h  globals.cpp  globals.h  grid.cpp  grid.h  types.h
cpp/src/multi/: fill.cpp  fill.h  functions.cpp  functions.h  pfmm.cpp  pfmm.h
cpp/src/scipy/: legendre.cpp  legendre.h  lgmres.cpp  lgmres.h  newton_krylov.cpp  newton_krylov.h  newton_krylov.py  poly.cpp  poly.h
cpp/src/solvers/: basis.cpp  basis.h  evaluations.cpp  evaluations.h  iterator.cpp  iterator.h  steppers.cpp  steppers.h  utils.cpp  utils.h
cpp/src/solvers/dg/: dg.cpp  dg.h  dg0.cpp  dg0.h  dg1.cpp  dg1.h  dg2.cpp  dg2.h  dg_matrices.cpp  dg_matrices.h  initial_guess.cpp  initial_guess.h
cpp/src/solvers/fv/: fluxes.cpp  fluxes.h  fv.cpp  fv.h
cpp/src/solvers/poly/: basis.cpp  evaluations.h
cpp/src/solvers/split/: homogeneous.cpp  homogeneous.h  numeric.cpp  ode.cpp  ode.h  ode_analytic.cpp  ode_analytic.h  ode_numeric.cpp  rk.cpp  rk.h
cpp/src/solvers/weno/: weno.cpp  weno.h  weno_matrices.cpp  weno_matrices.h
cpp/src/system/: analytic.cpp  analytic.h  eig.cpp  eig.h  equations.cpp  equations.h  jacobians.cpp  jacobians.h  objects.h
cpp/src/system/energy/: derivatives.cpp  derivatives.h  eos.cpp  eos.h  mg.cpp  mg.h  multi.cpp  multi.h
cpp/src/system/functions/: matrices.cpp  matrices.h  vectors.cpp  vectors.h
cpp/src/system/multi/: conditions.cpp  conditions.h  eigenvecs.cpp  eigenvecs.h  riemann.cpp  riemann.h  rotations.cpp  rotations.h
cpp/src/system/objects/: gpr_objects.h
cpp/src/system/relaxation/: numerical.cpp  numerical.h
cpp/src/system/variables/: derivatives.cpp  derivatives.h  eos.cpp  eos.h  materials.cpp  materials.h  mg.cpp  mg.h  shear.cpp  shear.h  sources.cpp  sources.h  state.cpp  state.h  wavespeeds.cpp  wavespeeds.h
cpp/src/system/waves/: shear.cpp  shear.h  speeds.cpp  speeds.h
cpp/src/test/: initial_grids.cpp  initial_grids.h  params.cpp  params.h
dissertation/: Dissertation.lyx  refs.bib
dissertation/Appendices/: A1 System Matrices.lyx  A2 Eigenstructure.lyx  A3 Model Parameters.lyx
dissertation/Chapters/: C0 Introduction.lyx  C1 Extending the GPR Model.lyx  C2 Improved Numerical Methods.lyx  C3 Simulating Material Interfaces.lyx  C4 Impact-Induced Detonation in an Elasto-Plastic Confiner.lyx  C5 Conclusions & Discussion.lyx
dissertation/FrontMatter/: Abstract.lyx  Acknowledgements.lyx  Declaration.lyx  ResearchOutput.lyx
julia/: plot.jl  weno.jl  weno_matrices.jl
latex/: ConfinedDetonation.lyx  DG jacobian.lyx  EOS.lyx  StressTensor.lyx  T Primitive System.lyx  backup.lyx  distortion_energy.lyx  hllc.lyx  notes.lyx  notes.lyx~  primitive model derivation.lyx  refs.bib  riemann invariants.lyx  split plasticity.lyx  split stretch rotation.lyx
latex/interfaces/: DealingWithMultimaterialInterfaces.lyx  RiemannInvariants.lyx  riemann invariants.lyx
latex/models/: BinghamPlastics.lyx  GodunovRomenskiStressTensor.lyx  PlasticityModels.lyx  PowerLawFluids.lyx  StressTensor.lyx  T Primitive System.lyx  nondimensionalization.lyx
latex/numerics/: CauchyTensorDecomposition.lyx  SolvingGeneralizedBlasius.lyx  distortion_energy.lyx
mathematica/: Diagonalization.nb  DistortionODEs.nb  EigendecompAngles.nb  EigendecompVectors.nb  Eigenvalues.nb  GPRModel.nb  NonConservativeSplitG.nb  SplitGSolver.nb  WenoMatrices.nb  WenoMatricesN=1.nb
mathematica/gpr/: EOS.nb
mathematica/split/: EigendecompAngles.nb  EigendecompQuaternions.nb
papers/: Submission Instructions.txt  refs.bib  submission.txt
papers/refs/: mphil_refs.bib  my_publications.bib  phd_refs.bib
python/: .gitignore  convergence.py  main.py  main2.py  options.py  plot.py  requirements.txt  system.py
python/_backup/: fv.py  fv_fluxes.py  new_predictor.py  old_solvers.py  weno.py
python/_experimental/: alternative_funcs.py  eig.py  eigendecomp.py  implicit.py  split_eqs.py  split_plasticity.py  stiff_riemann.py  symbolic.py  systems.py  testing_ground.py  weno_prim.py
python/ader/: basis.py  dg.py  dg_matrices.py  fv.py  fv_fluxes.py  fv_space_only.py  parallel.py  weno.py  weno_matrices.py
python/auxiliary/: adjust.py  bc.py  boundaries.py  classes.py  common.py  funcs.py  iterator.py  save.py  solvers.py
python/backup/: fv_fluxes.py  numeric.py  old_solvers.py
python/etc/: boundaries.py  convergence.py  cpp.py  grids.py  iterator.py  save.py
python/experimental/: eigendecomp.py  implicit.py  new_solver.py  power_law_fluid.py  riemann_backup.py  riemann_eig.py  split_eqs.py  split_plasticity.py  stiff_riemann.py  symbolic.py  testing_ground.py
python/gpr/: eig.py  functions.py  matrices.py  matrices_jacobians.py  matrices_primitive.py  opts.py  plot.py  primitive.py  symbolic.py  thermo.py  variables.py
python/multi/: approximate_riemann.py  exact_euler.py  gfm.py  implicit.py  riemann.py
python/slic/: homogeneous.py  ode.py
python/solver/: __init__.py  cpp.py  gfm.py  solver.py  split.py
python/solvers/: basis.py  solver_class.py  solvers.py
python/split/: distortion.py  homogeneous.py  ode.py  slic.py  thermal.py
python/system/: eig.py  eigenvalues.py  system.py
python/test/: __init__.py  boundaries.py  convergence.py
python/tests/: barton.py  convergence.py  cookoff.py  diffusion.py  multi.py  standard.py  toro.py  validation.py
python/tests_1d/: barton.py  common.py  diffusion.py  fluids.py  multi.py  solids.py  (+2 more)
(+517 files in other folders)
